--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.6",
+    "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "next-intl": "^4.3.12",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
